  default was specified and the argument was given as well.  This was
  especially problematic for the FileType type, as a default file would always
  be opened, even if a file argument was specified on the command line.

Extension Modules
-----------------

Tests
-----

- Issue #15802: Fix test logic in TestMaildir.test_create_tmp. Patch
  by Serhiy Storchaka.

Build
-----

- Issue #15819: Make sure we can build Python out-of-tree from a readonly
  source directory.  (Somewhat related to Issue #9860.)

Documentation
-------------

- Issue #11964: Document a change in v3.2 to the behavior of the indent
  parameter of json encoding operations.

Tools/Demos
-----------


What's New in Python 3.3.0 Release Candidate 2?
===============================================

*Release date: XX-Sep-2012*

Core and Builtins
-----------------

- Issue #15784: Modify OSError.__str__() to better distinguish between
  errno error numbers and Windows error numbers.

- Issue #15781: Fix two small race conditions in import's module locking.

Library
-------

- Issue #15828: Restore support for C extensions in imp.load_module()

- Issue #10650: Deprecate the watchexp parameter of the Decimal.quantize()
  method.

- Issue #15785: Modify window.get_wch() API of the curses module: return
  a character for most keys, and an integer for special keys, instead of
  always returning an integer. So it is now possible to distinguish special
  keys like keypad keys.

- Issue #14223: Fix window.addch() of the curses module for special characters
  like curses.ACS_HLINE: the Python function addch(int) and addch(bytes) is now
  calling the C function waddch()/mvwaddch() (as it was done in Python 3.2),
  instead of wadd_wch()/mvwadd_wch(). The Python function addch(str) is still
  calling the C function wadd_wch()/mvwadd_wch() if the Python curses is linked
  to libncursesw.

Documentation
-------------

- Issue #15814: The memoryview enhancements in 3.3.0 accidentally permitted